--- a/src/index.html
+++ b/src/index.html
@@ -66,8 +66,7 @@
                         <div class="end-game__description">
                             <b>Result :</b>&nbsp;Dead
                         </div>
-                        <div class="end-game__statistics">
-                        </div>
+                        <div class="end-game__statistics"></div>
                     </div>
                     <div class="end-game__actions">
                         <div class="button button--welcome">
