Update template of pages

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,11 @@
     <body>
         <div class="game">
             <div class="game__interface game__interface--welcome-interface">
+                <div class="game__banner">TextQuest V0.4.1</div>
                 <div class="game__menu">
-                    <div class="button button--start">New Game</div>
-                    <div class="button button--continue">Continue</div>
-                    <div class="button button--loading">Loading</div>
-                    <div class="button button--history">History of games</div>
-                    <div class="button button--end">End</div>
+                    <div class="button button--start">Нова Гра</div>
+                    <div class="button button--continue">Продовжити</div>
+                    <!-- <div class="button button--history">Історія ігор</div> -->
                 </div>
             </div>
             <div
@@ -62,15 +61,15 @@
             >
                 <div class="end-game">
                     <div class="end-game__info">
-                        <div class="end-game__banner">The End Of Game</div>
+                        <div class="end-game__banner">Кінець гри</div>
                         <div class="end-game__description">
-                            <b>Result :</b>&nbsp;Dead
+                            <b>Результат :</b>&nbsp;Знайшли скарб
                         </div>
                         <div class="end-game__statistics"></div>
                     </div>
                     <div class="end-game__actions">
                         <div class="button button--welcome">
-                            Go to main menu
+                            Назад в головне меню
                         </div>
                     </div>
                 </div>
