Fix error with no auto-upload current progress
Fix logic of Welcome Page (buttons start & continue) begins with first step
and add auto-upload current save

--- a/src/index.html
+++ b/src/index.html
@@ -74,9 +74,8 @@
                     </div>
                 </div>
             </div>
-            <div
-                class="game__interface game__interface--loading-interface game__interface--hidden"
-            >
+            <!-- game__interface--hidden -->
+            <div class="game__interface game__interface--loading-interface">
                 <div class="lds-circle lds-circle--overridden">
                     <div></div>
                 </div>
